lab1/Test/L1-A-7-58.output
Error Type A at Line 11
Error Type A at Line 22
Error Type A at Line 34
Error Type A at Line 76
Error Type A at Line 94
